# evalbot

./: README.md  deployment.yaml  pyproject.toml  tox.ini
.github/workflows/: build.yml  check-deploy.yml  deploy.yml  lint.yml  sentry_release.yml
bot/: __init__.py  __main__.py  constants.py  hastebin.py  log.py  utils.py
bot/exts/: error_handler.py  internal.py  snekbox.py
