[tool.poetry]
name = "evalbot"
version = "1.0.0"
description = "A small discord bot to demo python 3.10 features."
authors = ["Hassan Abouelela <hassan@hassanamr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
"discord.py" = "~=1.7.3"
sentry-sdk = "~=1.14"
coloredlogs = "~=14.0"

[tool.poetry.dev-dependencies]
python-dotenv = "~=0.17.1"
flake8 = "~=3.8"
flake8-annotations = "~=2.0"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.4"
flake8-import-order = "~=0.18"
flake8-string-format = "~=0.2"
flake8-tidy-imports = "~=4.0"
flake8-todo = "~=0.7"
pep8-naming = "~=0.9"
pre-commit = "~=2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
